# ZhaoBigHomo

./: CMakeLists.txt  CompilerTypes.h  Expression.cpp  Expression.h  FakeAssembly.cpp  FakeAssembly.h  FakeAssemblyBuilder.h  LICENSE  Lexer.cpp  Lexer.h  README.md  ZCompiler.cpp
.github/workflows/: cmake-single-platform.yml
tests/: allocator.txt  decorator.txt  factorial.txt  pair.txt  quick_power.txt  std.txt  swap.txt
